<resources>
    <string name="app_name">ContentProvider</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Nick Names Directory</string>
    <string name="name">Enter name</string>
    <string name="nickname">Enter Nick Name</string>
    <string name="add">Add New</string>
    <string name="show">Show All</string>
    <string name="delete">Delete All</string>
</resources>
